# university-courses

./: .gitignore  README.md
ASD/: README.md
ASD/LabASD1/: README
Crypto/: KasiskaTest.cpp  KasiskaTest.out  input.in
Crypto/KasiskaTest/: KasiskaTest.cpp
Crypto/ViginereDercyptor/: Makefile
FunctionalProgramming/hw1/: README.md  hw1.cabal  hw1.nix  release.nix
FunctionalProgramming/hw1/src/: Block1.hs  Task1.hs  Task2.hs  Task3.hs  Task5.hs  Task6.hs  Task7.hs
FunctionalProgramming/hw1/test/: Spec.hs  SpecTask1.hs  SpecTask2.hs  SpecTask3.hs  SpecTask4.hs  SpecTask5.hs  SpecTask6.hs  SpecTask7.hs
FunctionalProgramming/hw2/: .editorconfig  README.md  hw2.cabal  hw2.nix  release.nix
FunctionalProgramming/hw4/: README.md  hw4.cabal  hw4.nix  release.nix
FunctionalProgramming/hw4/src/: Task1.hs
MachineLearning/: default.nix
MachineLearning/Bayes/: Bayes.ipynb
MachineLearning/Boost/: Boost.ipynb
MachineLearning/CNN/: CNN.ipynb
MachineLearning/Clust/: Clust.ipynb
MachineLearning/Codeforces/: ClassDistances.py  ConditionalDispersion.kt  ConditionalEntropy.kt  CrossValidation.py  DecisionTree.kt  DecisionTree.py  Fmeasure.py  Hi_2.kt  LinearRegression.py  LogicalExpression.kt  MatFunction.kt  NaiveBayes.cpp  NaiveBayes.py  NonparametricRegression.py  PearsonCoef.py  SpearmenRank.kt  SpearmenRank.py  SupportVector.py
MachineLearning/DecisionTree/: DecisionTree.ipynb
MachineLearning/LinearRegression/: LinearRegression.ipynb
MachineLearning/SVM/: svm.ipynb
MachineLearning/kNN/: knn.ipynb
MathLog/Task1/: Grammar.hs  Main.hs
MathLog/Task1cpp/: Makefile  expression.h  parser.cpp
MathLog/Task2cpp/: Makefile  expression.h  main.cpp  parser.cpp
MathLog/Task3cpp/: main.cpp
MathLog/Task4cpp/: Makefile  main.cpp
MathLog/Task5cpp/: a.out  checker.cpp  main.cpp
MathLog2018/: README.md
MathLog2018/Completness/: Main.hs  makefile
MathLog2018/MinimizingProof/: Main.hs  makefile
MathLog2018/ParseExpression/: Main.hs  makefile
OC_Mayatin/lab1/: ii  iv  vi
OC_Mayatin/lab2/: emails.lst  i
OC_Mayatin/lab4/: script4  script6generate
OC_Mayatin/lab5/: untrash
OS_Mayatin/lab1/: .swo  .swp  i  ii.save  iii
OS_Mayatin/lab2/: last1  last2  v  vi  vii
OS_Mayatin/lab3/: hard.sh  i.sh  iii.sh  iv.sh  v.sh
OS_Mayatin/lab4/: script1  script2  script4processiong  script5handle  script7handle
OS_Mayatin/lab5/: rmtrash  upback
OperatingSystem/lab2/: ii  iii  iv  last
OperatingSystem/lab3/: ii.sh  vi.sh
OperatingSystem/lab4/: script3  script5generate
OperationSystem/lab1/: v
OperationSystem/lab2/: emailsBuff.lst
OperationSystem/lab5/: backup
TranslationMethods/AutomaticGeneration/: README.md
TranslationMethods/Perl/: 1.1.perl  1.10.perl  1.11.perl  1.2.perl  1.3.perl  1.4.perl  1.5.perl  1.6.perl  1.7.perl  1.8.perl  (+17 more)
(+223 files in other folders)
