name:                hw1
version:             0.1.0.0
synopsis:            First functional programming homework 
description:         HW 1 for FP ITMO CT course

homepage:            https://github.com/fp-ctd-itmo/hw1-DubKoldun
author:              Epifantsev Vitaliy
maintainer:          epifantsev.vitaliy@gmail.com
copyright:           2020 Somebody

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.4

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task5
                     , Task6
                     , Task7
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.9
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       SpecTask1
                     , SpecTask2
                     , SpecTask3
                     , SpecTask4
                     , SpecTask5
                     , SpecTask6
                     , SpecTask7
  main-is:             Spec.hs
  build-depends:       base 
                     , extra
                     , tasty
                     , tasty-hspec
                     , hw1
  ghc-options:         -Wall -O2 -Werror -main-is Spec
  default-language:    Haskell2010