name:                hw4
version:             0.1.0.0
synopsis:            Second functional programming homework 
description:         HW 4 for FP ITMO CT course

homepage:            https://github.com/fp-ctd-itmo/hw4-DubKoldun
author:              Epifantsev Vitaliy
maintainer:          epifantsev.vitaliy@gmail.com
copyright:           2020 Somebody

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.4

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                     , Block2
                     , Block3
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.9
                     , mtl
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       SpecBlock1
                     , SpecBlock2
                     , SpecBlock3
  main-is:             Spec.hs
  build-depends:       base 
                     , extra
                     , tasty
                     , tasty-hspec
                     , hw4
  ghc-options:         -Wall -O2 -Werror -main-is Spec 
  default-language:    Haskell2010